--- a/recipes/cookies.html
+++ b/recipes/cookies.html
@@ -2,10 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Odin Recipes</title>
+        <title>Recipe: Cookies</title>
     </head>
     <body>
-        <h1>Odin Recipes</h1>
-        
+        <h1>Cookies</h1>
     </body>
 </html>
