--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        
+        <h2>List of Recipes:</h2>
+        <ul>
+            <li><a href="./recipes/cookies.html">Cookies</a></li>
+            <li><a href="./recipes/lemonpie.html">Lemon Pie</a></li>
+            <li><a href="./recipes/pepperonibread.html">Pepperoni Bread</a></li>
+        </ul>
     </body>
 </html>
