Lemon pie recipe and index image

--- a/recipes/cookies.html
+++ b/recipes/cookies.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Cookies</h1>
-        <img src="./good-lookin-cookies.jpg" alt="Two cookies">
+        <img src="../img/good-lookin-cookies.jpg" alt="Two cookies">
         <h2>Let's make some classic chocolate chip cookies!</h2>
         <p>This is your old-but-gold, traditional cookies to satisfy that need for sweets or that need for traditional baked goods. It is simple and easy — anyone can do it!</p>
         <p>The recipe was taken from <a href="https://www.bbcgoodfood.com/recipes/vintage-chocolate-chip-cookies">BBC's Good Food</a>.</p>
@@ -33,5 +33,6 @@
             <li>Bake for 8-10 minutes, until they are light brown on theesges and still slightly soft in the center.</li>
             <li>Let them cool off and they are ready!</li>
         </ol>
+        <a href="../index.html">Back</a>
     </body>
 </html>
