--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <title>Odin Recipes</title>
     </head>
     <body>
-        <h1>Odin Recipes</h1>
+        <h1>Let's Cook!</h1>
+        <img src="./img/kitchen-top.jpg" alt="A kitchen top with random ingrients.">
         <h2>List of Recipes:</h2>
         <ul>
             <li><a href="./recipes/cookies.html">Cookies</a></li>
