--- a/recipes/lemonpie.html
+++ b/recipes/lemonpie.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Lemon Pie</h1>
-        <img src="" alt="Lemon Pie">
+        <img src="../img/lemon-pie.jpg" alt="Lemon Pie">
         <h2>Let's make Lemon Pie!</h2>
         <p>This is a brazillian-variant of the lemon pie recipe. The ingrients are more on the simpler side, but the tasty is top-notch!</p>
         <p>Recipe taken from <a href="https://www.tudogostoso.com.br/receita/104383-torta-de-limao.html">Tudo Gostoso</a>.</p>
