--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="./style.css">
         <meta charset="UTF-8">
         <title>Odin Recipes</title>
     </head>
     <body>
+        <div class="whole-page"></div>
+        <div class="main-page">
         <h1>Let's Cook!</h1>
         <img src="./img/kitchen-top.jpg" alt="A kitchen top with random ingrients.">
         <h2>List of Recipes:</h2>
@@ -13,5 +16,6 @@
             <li><a href="./recipes/lemonpie.html">Lemon Pie</a></li>
             <li><a href="./recipes/pepperonibread.html">Pepperoni Bread</a></li>
         </ul>
+        </div>
     </body>
 </html>
