Fix some styling issues

--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
         <title>Odin Recipes</title>
     </head>
     <body>
-        <div class="whole-page"></div>
+        <img src="./img/background_1920.jpg" alt="kitchen" class="whole-page">
         <div class="main-page">
-        <h1>Let's Cook!</h1>
-        <img src="./img/kitchen-top.jpg" alt="A kitchen top with random ingrients.">
-        <h2>List of Recipes:</h2>
-        <ul>
-            <li><a href="./recipes/cookies.html">Cookies</a></li>
-            <li><a href="./recipes/lemonpie.html">Lemon Pie</a></li>
-            <li><a href="./recipes/pepperonibread.html">Pepperoni Bread</a></li>
-        </ul>
+            <h1>Let's Cook!</h1>
+            <img src="./img/kitchen-top.jpg" alt="A kitchen top with random ingrients.">
+            <h2>List of Recipes:</h2>
+            <ul>
+                <li><a href="./recipes/cookies.html">Cookies</a></li>
+                <li><a href="./recipes/lemonpie.html">Lemon Pie</a></li>
+                <li><a href="./recipes/pepperonibread.html">Pepperoni Bread</a></li>
+            </ul>
         </div>
     </body>
 </html>
