Fixed background image and purple layer
    • The site looks bad, but the effect was a bit tricky for me.
    Luckily, I've got it covered with my new tricks.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <img src="./img/background_1920.jpg" alt="kitchen" class="whole-page">
+        <div class="whole-page purple-layer"></div>
         <div class="main-page">
             <h1>Let's Cook!</h1>
             <img src="./img/kitchen-top.jpg" alt="A kitchen top with random ingrients.">
