--- a/recipes/lemonpie.html
+++ b/recipes/lemonpie.html
@@ -7,6 +7,7 @@
     </head>
     <body> 
         <img src="../img/background_1920.jpg" alt="kitchen" class="whole-page">
+        <div class="whole-page purple-layer"></div>
         <div class="main-page">
             <a href="../index.html" style="font-size:32px;                                           text-decoration:none;">←</a>
             <h1>Lemon Pie</h1>
